package pfe.DTO;

public class UserDto {
    public String username;
    public String password;
}